Update CRUD apis to interact with specific images in one document

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "db:setup": "node database/seed.js",
     "build": "webpack -d --watch",
     "test": "jest",
+    "test:watch": "jest --watch",
     "dockerStart": "node database/seed.js && nodemon server/index.js"
   },
   "dependencies": {
