--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "mongoose": "^5.6.9",
+    "mysql": "^2.17.1",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
