--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cassandra-driver": "^4.2.0",
     "chai": "^4.2.0",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
