--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "nodemon server/index.js",
     "db:setup": "node database/seed.js",
     "mysql:setup": "node database/mysql/seed.js",
+    "cassandra:setup": "node database/cassandra/seed.js",
     "build": "webpack -d --watch",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -27,6 +28,7 @@
     "jquery": "^3.4.1",
     "mongoose": "^5.6.9",
     "mysql": "^2.17.1",
+    "newrelic": "^5.13.0",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
