--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "startMongo": "DB='mongo' nodemon server/index.js",
-    "startMySql": "DB='mySql' nodemon server/index.js",
+    "startMySql": "DB='mySql' ENV='dev' nodemon server/index.js",
+    "start-prod": "DB='mySql' ENV='prod' nodemon server/index.js",
     "startCassandra": "DB='cassandra' nodemon server/index.js",
     "db:setup": "node database/seed.js",
     "mysql:setup": "node database/mysql/seed.js",
