Update to use NODE_ENV

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "startMongo": "DB='mongo' nodemon server/index.js",
     "startMySql": "DB='mySql' ENV='dev' nodemon server/index.js",
-    "start-prod": "DB='mySql' ENV='prod' && node database/mysql/seed.js && sleep 2 && nodemon server/index.js",
+    "start-prod": "DB='mySql' NODE_ENV='prod' && node database/mysql/seed.js && sleep 2 && nodemon server/index.js",
     "startCassandra": "DB='cassandra' nodemon server/index.js",
     "db:setup": "node database/seed.js",
     "mysql:setup": "node database/mysql/seed.js",
