--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "startMongo": "DB='mongo' nodemon server/index.js",
-    "startMySql": "DB='mySql' ENV='dev' nodemon server/index.js",
+    "startMySql": "DB='mySql' NODE_ENV='dev' nodemon server/index.js",
     "start-prod": "DB='mySql' NODE_ENV='prod' node database/mysql/seed.js && sleep 2 && DB='mySql' NODE_ENV='prod' nodemon server/index.js",
     "startCassandra": "DB='cassandra' nodemon server/index.js",
     "db:setup": "node database/seed.js",
