--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "db:setup": "node database/seed.js",
     "mysql:setup": "node database/mysql/seed.js",
     "cassandra:setup": "node database/cassandra/seed.js",
-    "build": "webpack -d --watch",
+    "build-dev": "webpack --env.API_URL=http://localhost:3002 -d --watch",
+    "build-prod": "webpack --env.API_URL=ec2-18-144-40-175.us-west-1.compute.amazonaws.com -d --watch",
     "test": "jest",
     "test:watch": "jest --watch",
     "dockerStart": "node database/seed.js && nodemon server/index.js"
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
+    "k6": "0.0.0",
     "mongoose": "^5.7.6",
     "mysql": "^2.17.1",
     "newrelic": "^5.13.0",
