--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "startMongo": "DB='mongo' nodemon server/index.js",
-    "startMySql": "DB='mySql' nodemon server/index.js",
+    "startMySql": "DB='mySql' nodemon index.js",
     "startCassandra": "DB='cassandra' nodemon server/index.js",
     "db:setup": "node database/seed.js",
     "mysql:setup": "node database/mysql/seed.js",
@@ -38,8 +38,10 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.6.2",
     "babel-loader": "^8.0.6",
     "babel-watch": "^7.0.0",
     "compression-webpack-plugin": "^3.0.0",
