--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "faker": "^4.1.0",
     "jquery": "^3.4.1",
     "k6": "0.0.0",
+    "location": "0.0.1",
     "mongoose": "^5.7.6",
     "mysql": "^2.17.1",
     "newrelic": "^5.13.0",
