--- a/package.json
+++ b/package.json
@@ -29,14 +29,17 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "faker": "^4.1.0",
+    "gcc": "^1.0.2",
     "jquery": "^3.4.1",
     "k6": "0.0.0",
+    "make": "^0.8.1",
     "mongoose": "^5.7.6",
     "mysql": "^2.17.1",
     "newrelic": "^5.13.0",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
