add request dependency

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.5.5",
