--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "mongoose": "^5.7.6",
     "mysql": "^2.17.1",
     "newrelic": "^5.13.0",
+    "nginx": "0.0.0",
     "nodemon": "^1.19.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
